--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -3,13 +3,16 @@
 {% block content %}
 <ul class="items">
 	{% for artist in artists %}
-	<li>
+	<li class="li-item">
 		<a href="/artists/{{ artist.id }}">
 			<i class="fas fa-users"></i>
 			<div class="item">
 				<h5>{{ artist.name }}</h5>
 			</div>
 		</a>
+		<div class="button-con">
+			<a class="edit-btn" href="/artists/{{ artist.id }}/edit"><i class="fas fa-edit"></i></a>
+		</div>
 	</li>
 	{% endfor %}
 </ul>
