--- a/templates/pages/search_venues.html
+++ b/templates/pages/search_venues.html
@@ -4,13 +4,17 @@
 <h3>Number of search results for "{{ search_term }}": {{ results.count }}</h3>
 <ul class="items">
 	{% for venue in results.data %}
-	<li>
+	<li class="li-item">
 		<a href="/venues/{{ venue.id }}">
 			<i class="fas fa-music"></i>
 			<div class="item">
 				<h5>{{ venue.name }}</h5>
 			</div>
 		</a>
+		<div class="button-con">
+			<a class="edit-btn" href="/venues/{{ venue.id }}/edit"><i class="fas fa-edit"></i></a>
+			<i class="fas fa-trash delete-btn venue-delete" data-id="{{ venue.id }}"></i>
+		</div>
 	</li>
 	{% endfor %}
 </ul>
